high-availability-webapp-cloudformation/network.yml
########################################################
###              UDACITY-PROJECT#2                   ###
###               Network-Stack                      ###
########################################################


Description: 
  Reffat Gharaibeh - UDAGRAM
  Stack Name "UDAGRAM-Network"
  - VPC
  - Subnets
  - Internet Gateway
  - NAT Gateway
  - Routing Public
  - Routing Private 

Parameters:

  EnvironmentName:
    Description: The Name of the Environment or Project
    Type: String
    Default: UDAGRAM
  
  VpcCIDR:
    Description: The CIDR Block of the VPC beeing created
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Description: The CIDR Block of the Public Subnet 1
    Type: String
    Default: 10.0.1.0/24

  PublicSubnet2CIDR:
    Description: The CIDR Block of the Public Subnet 2
    Type: String
    Default: 10.0.2.0/24

  PrivateSubnet1CIDR:
    Description: The CIDR Block of the Private Subnet 1
    Type: String
    Default: 10.0.3.0/24

  PrivateSubnet2CIDR:
    Description: The CIDR Block of the Private Subnet 2
    Type: String
    Default: 10.0.4.0/24
    
  AZ1:
    Description: The Availability Zone "1"
    Type: String

  AZ2:
    Description: The Availability Zone "2"
    Type: String



Resources:
########################################################
###                     VPC01                        ###
########################################################

  VPC01:  
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsHostnames: true
      CidrBlock: !Ref VpcCIDR
      Tags:
        - Key: Name
          Value: VPC01


########################################################
###                     SUBNETS                      ###
########################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Ref AZ1
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Subnet 1
      VpcId: !Ref VPC01

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Ref AZ2
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Subnet 2
      VpcId: !Ref VPC01


  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Ref AZ1
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Subnet 1
      VpcId: !Ref VPC01

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Ref AZ2 #!Select [0, !GetAZs '' ] 
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Subnet 2
      VpcId: !Ref VPC01 #!Sub ${EnvironmentName} Private Subnet (AZ2)


########################################################
###                INTERNET GATEWAY                  ###
########################################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ["", [InternetGateway, !Ref EnvironmentName]]

  InternetGatewayVPCAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC01


########################################################
###                  NAT GATEWAYS                    ###
########################################################

  EIP01:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayVPCAttachment
    Properties:
      Tags:
        - Key: Name
          Value: EIP01

  EIP02:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayVPCAttachment
    Properties:
      Tags:
        - Key: Name
          Value: EIP02

  NAT01:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt EIP01.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags: 
        - Key: Name
          Value: NAT01

  NAT02:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt EIP02.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags: 
        - Key: Name
          Value: NAT02


########################################################
###                 ROUTING Public                   ###
########################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC01
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayVPCAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2


########################################################
###                ROUTING Private                   ###
########################################################

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC01
      Tags: 
        - Key: Name 
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NAT01

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC01
      Tags: 
        - Key: Name 
          Value: !Sub ${EnvironmentName} Private Routes (AZ2)

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NAT02

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2


########################################################
###                    OUTPUTS                       ###
########################################################
  
Outputs:

  VPC:
    Description: Reference to the created VPC
    Value: !Ref VPC01
    Export:
      Name: !Sub ${EnvironmentName}-VPCID

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSubnets #Must be a continuous string without blank spaces

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    Export:
      Name: !Sub ${EnvironmentName}-PublicSubnets

  PublicSubnet1:
    Description: ID of public subnet 1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${EnvironmentName}-PublicSubnet1

  PublicSubnet2:
    Description: ID of public subnet 2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${EnvironmentName}-PublicSubnet2

  PrivateSubnet1:
    Description: ID of private subnet 1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSubnet1

  PrivateSubnet2:
    Description: ID of private subnet 2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub ${EnvironmentName}-PrivateSubnet2

  PublicRouteTable:
    Description: Reference to the PublicRouteTable
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${EnvironmentName}-PublicRouteTable

  PrivateRouteTable1:
    Description: Reference to the PrivateRouteTable1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub ${EnvironmentName}-PrivateRouteTable1
  
  PrivateRouteTable2:
    Description: Reference to the PrivateRouteTable2
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub ${EnvironmentName}-PrivateRouteTable2
